cabal-version:      3.14
name:               hint-in-browser
version:            0.1.0.0
-- synopsis:
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             ryndubei
maintainer:         114586905+ryndubei@users.noreply.github.com
-- copyright:
category:           Web
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
extra-source-files: www/*.mjs
                    www/*.js
                    www/*.css
                    www/*.html
                    www/public/favicon.png

common warnings
    ghc-options: -Wall

executable hint-in-browser
    import:           warnings
    -- main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base
                    , hint
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options: -no-hs-main -optl-mexec-model=reactor -optl-Wl,--export=run_hint_in_browser
