cabal-version:      3.14
name:               hint-in-browser
version:            0.1.0.0
-- synopsis:
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             ryndubei
maintainer:         114586905+ryndubei@users.noreply.github.com
-- copyright:
category:           Web
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
extra-source-files: www/*.mjs
                    www/*.js
                    www/*.css
                    www/*.html
                    www/public/favicon.png

common warnings
    ghc-options: -Wall

library
    import:           warnings
    other-modules:    HintInBrowser
    -- other-extensions:
    build-depends:    base == 4.22.0.0
                    , hint == 0.9.0.9
                    , vector == 0.13.2.0
                    , async
                    , hashable
                    , unordered-containers
    hs-source-dirs:   app
    default-language: GHC2024
