cabal-version:      3.14
name:               hint-in-browser
version:            0.1.0.0
-- synopsis:
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             ryndubei
maintainer:         114586905+ryndubei@users.noreply.github.com
-- copyright:
category:           Web
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
extra-source-files: www/*.mjs
                    www/*.js
                    www/*.css
                    www/*.html
                    www/public/favicon.png

common warnings
    ghc-options: -Wall

library
    import:           warnings
    other-modules:    HintInBrowser
    -- other-extensions:
    build-depends:    base == 4.22.0.0
                    , hint == 0.9.0.9
                    , vector == 0.13.2.0
                    -- We do not use the hashable dependency, but hint will not work
                    -- in the browser if this project is built on without hashable
                    -- present in the cabal store. If it is present in the store
                    -- but not listed here, it will also mysteriously show up in
                    -- cabal's GHC environment file anyway.
                    , hashable
    hs-source-dirs:   app
    default-language: GHC2024
